--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -1,18 +1,22 @@
 <!doctype html>
 <html>
+
 <head>
-	<meta charset="utf-8" />
-	<title>HZNU Online Judge</title>
-    <link rel="stylesheet" href="<%= context.config.publicPath %>amazeui@2.7.3/css/amazeui.min.css">
+  <meta charset="utf-8" />
+  <title>HZNU Online Judge</title>
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="format-detection" content="telephone=no">
+  <link rel="stylesheet" href="<%= context.config.publicPath %>amazeui/css/amazeui.min.css">
 </head>
 
 <body>
-	<noscript>You need to enable JavaScript to run this app.</noscript>
-	<div id="root"></div>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
 </body>
 
 
-<script src="<%= context.config.publicPath %>jquery@3.5.1/jquery.min.js"></script>
-<script src="<%= context.config.publicPath %>amazeui@2.7.3/js/amazeui.min.js"></script>
+<script src="<%= context.config.publicPath %>jquery/jquery.min.js"></script>
+<script src="<%= context.config.publicPath %>amazeui/js/amazeui.min.js"></script>
 
 </html>
