--- a/src/layouts/Basic.less
+++ b/src/layouts/Basic.less
@@ -3,7 +3,7 @@
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  border: 5px solid red;
+  // border: 5px solid red;
 }
 
 .secondRoot {
