--- a/src/global.css
+++ b/src/global.css
@@ -6,3 +6,15 @@
     -webkit-box-shadow: 0 2px 0 rgba(0, 0, 0, .045);
     box-shadow: 0 2px 0 rgba(0, 0, 0, .045);
 }
+
+a {
+    color: #4183C4;
+}
+
+.h-ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
