--- a/src/components/Footer.less
+++ b/src/components/Footer.less
@@ -2,6 +2,8 @@
   font-size: ;
   width: 100%;
   max-width: 1180px;
+  height: 66px;
+  margin-top: -66px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
@@ -16,5 +18,5 @@
 }
 
 .github {
-  width: 16;
+  width: 16px;
 }
