--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -7,16 +7,10 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
-  <style>
-    .fixed-footer {
-      position: absolute;
-      bottom: 0;
-    }
-  </style>
   <link rel="stylesheet" href="<%= context.config.publicPath %>amazeui/css/amazeui.min.css">
 </head>
 
-<body style="position: relative;">
+<body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <div class="amz-toolbar" id="go-top" style="display: none; position: fixed; bottom: 15px; right: 15px;">
