--- a/src/layouts/Basic.less
+++ b/src/layouts/Basic.less
@@ -13,4 +13,16 @@
 .main {
   padding-bottom: 66px;
   min-height: calc(100vh - 50px);
+  height: 100%;
+}
+
+.h-header {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 0px;
+  padding-right: 0px;
+  width: 100%;
+  max-width: 1180px;
+  // forbid set height
+  // height: 50px;
 }
