--- a/src/pages/contest/contests/ContestsPage.less
+++ b/src/pages/contest/contests/ContestsPage.less
@@ -10,34 +10,7 @@
   justify-content: center;
 }
 
-.Table {
-  :global {
-    .ant-table-tbody
-      > tr.ant-table-row-hover:not(.ant-table-expanded-row):not(.ant-table-row-selected)
-      > td,
-    .ant-table-tbody
-      > tr:hover:not(.ant-table-expanded-row):not(.ant-table-row-selected)
-      > td,
-    .ant-table-thead
-      > tr.ant-table-row-hover:not(.ant-table-expanded-row):not(.ant-table-row-selected)
-      > td,
-    .ant-table-thead
-      > tr:hover:not(.ant-table-expanded-row):not(.ant-table-row-selected)
-      > td {
-      background: rgb(221, 230, 235);
-    }
-
-    .ant-table-tbody > tr > td {
-      height: 32px;
-    }
-
-    .ant-table-thead > tr > th {
-      background: #3e90cc;
-      color: #fff;
-    }
-  }
-}
-
 .tableRoot {
   width: 100%;
+  font-weight: bold;
 }
