fix: contest status badge

--- a/src/less/AntTableHead.less
+++ b/src/less/AntTableHead.less
@@ -1,4 +1,4 @@
-.Table {
+.table {
   :global {
     .ant-table-tbody
       > tr.ant-table-row-hover:not(.ant-table-expanded-row):not(.ant-table-row-selected)
