--- a/src/pages/auth/auth.less
+++ b/src/pages/auth/auth.less
@@ -1,10 +1,10 @@
 .root {
-  font-family: Georgia !important;
-  padding-top: 56px;
-  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  padding-top: 56px;
+  font-family: Georgia !important;
 }
 
 .secondRoot {
@@ -12,12 +12,12 @@
 }
 
 .title {
-  font-size: 28px;
-  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: 'rgba(0,0,0,.85)';
+  width: 100%;
+  color: "rgba(0,0,0,.85)";
+  font-size: 28px;
 }
 
 .form {
