--- a/src/utils/hooks/useTableFilter.less
+++ b/src/utils/hooks/useTableFilter.less
@@ -1,17 +1,16 @@
-/*多选框去掉三角和文字*/
-.ant-select-tree {
-  padding-left: 12px !important;
-
-  span.ant-select-tree-switcher,
-  .ant-select-tree-indent {
-    display: none;
-  }
-}
-
-.table-filter-dropdown {
+.h-table-filter-dropdown {
   position: relative;
   padding: 6px;
   box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.15);
+
+  .ant-select-tree {
+    padding-left: 6px !important;
+
+    span.ant-select-tree-switcher,
+    .ant-select-tree-indent {
+      display: none;
+    }
+  }
 
   .tree-select {
     width: 150px;
@@ -21,9 +20,9 @@
     .ant-select-selector {
       height: 26px;
 
-      .ant-select-selection-item {
-        display: none;
-      }
+      // .ant-select-selection-item {
+      //   display: none;
+      // }
     }
   }
 
