feat: add apiversion

--- a/src/components/Loading.module.less
+++ b/src/components/Loading.module.less
@@ -1,6 +1,6 @@
 .loader {
   display: -webkit-flex;
-  /*safari弹性布局*/
+  /*safari elasticity layout*/
   display: flex;
   align-items: center;
   justify-content: center;
