--- a/src/components/SiderMenu.module.less
+++ b/src/components/SiderMenu.module.less
@@ -1,10 +1,10 @@
 .m-menu {
   position: relative;
-  padding: 10px 0 10px 0px;
+  padding: 0px 0px 10px 0px;
 
   .m-menu-item {
     width: 100%;
-    padding: 5px 10px;
+    padding: 5px 0px;
     font-weight: 500;
     font-size: 16px;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
