--- a/src/components/SiderMenu.module.less
+++ b/src/components/SiderMenu.module.less
@@ -9,17 +9,18 @@
     font-size: 16px;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
       sans-serif, Apple Color Emoji, Segoe UI Emoji;
-    border-right: 5px solid #fff;
     cursor: pointer;
     -webkit-transition: 0.7s;
     transition: 0.7s;
 
     &.left {
       text-align: left;
+      border-right: 5px solid #fff;
     }
 
     &.right {
       text-align: right;
+      border-left: 5px solid #fff;
     }
 
     &:hover,
