--- a/src/pages/auth/auth.module.less
+++ b/src/pages/auth/auth.module.less
@@ -8,7 +8,13 @@
 }
 
 .secondRoot {
-  width: 320px;
+  @media screen and (max-width: 375px) {
+    width: 100%;
+  }
+
+  @media screen and (min-width: 376px) {
+    width: 320px;
+  }
 }
 
 .title {
