--- a/src/markdown/MarkdownContent.module.less
+++ b/src/markdown/MarkdownContent.module.less
@@ -1,4 +1,4 @@
-@border-color: rgba(34, 36, 38, 0.15);
+@border-color: #46a0e4;
 
 .codeBox {
   position: relative;
@@ -12,11 +12,11 @@
   // font-size: 1rem;
   // font-size: 14px;
   background: inherit !important;
-  border: 1px solid rgba(34, 36, 38, 0.15);
-  border-color: @border-color!important;
-  border-right-color: @border-color!important;
-  border-bottom-color: @border-color!important;
-  border-left-color: @border-color!important;
+  border: 1px solid @border-color;
+  border-color: @border-color !important;
+  border-right-color: @border-color !important;
+  border-bottom-color: @border-color !important;
+  border-left-color: @border-color !important;
   border-radius: 0.28571429rem;
   box-shadow: 0 1px 2px 0 var(--theme-shadow);
   -webkit-text-size-adjust: 100%;
@@ -28,12 +28,23 @@
   font-size: 15px;
   transform: translate3d(0, 0, 0);
 
-  :global {
-    .inline {
+  .MathJax {
+    &.inline {
       font-size: 16px !important;
     }
-    .block {
+
+    &.block {
+      overflow: auto;
+      overflow-y: hidden;
       font-size: 18px !important;
+
+      &:first-child {
+        padding-top: 0 !important;
+      }
+
+      &:last-child {
+        padding-bottom: 0 !important;
+      }
     }
   }
 
@@ -44,8 +55,7 @@
   }
 
   p,
-  blockquote,
-  mjx-container[display="true"] {
+  blockquote {
     overflow: auto;
     overflow-y: hidden;
   }
@@ -53,14 +63,23 @@
   blockquote {
     margin: 1em 0;
     padding: 0 0 0 1em;
-    color: var(--theme-blockquote-foreground);
-    border-left: 0.25em solid var(--theme-blockquote-side);
+    color: #777;
+    // border-left: 0.25em solid #dedede;
+    border-left: 0.24em solid @border-color;
+  }
+
+  :not(pre) > code {
+    padding: 1px;
+    color: #24292e;
+    font-size: 14px;
+    background-color: #dadada;
+    border: 1px solid #ddd;
+    border-radius: 3px;
   }
 
   ul,
   ol,
-  blockquote,
-  mjx-container[display="true"] {
+  blockquote {
     &:first-child {
       margin-top: 0 !important;
     }
@@ -111,6 +130,618 @@
 
     .taskListCheckbox > label:first-of-type + div {
       padding-left: 24px;
+    }
+  }
+
+  // tabbed
+  :global {
+    --md-default-fg-color--lightest: hsla(0, 0%, 0%, 0.07);
+    --md-accent-fg-color: hsla(231, 99%, 66%, 1);
+    --md-default-fg-color--light: hsla(0, 0%, 0%, 0.54);
+
+    // Tabbed block content
+    .tabbed-content {
+      display: none;
+      order: 99;
+      width: 100%;
+      padding-top: 10px;
+      box-shadow: 0 -0.05rem var(--md-default-fg-color--lightest);
+
+      // Nested tabs
+      > .tabbed-set {
+        margin: 0;
+      }
+    }
+
+    // Tabbed block container
+    .tabbed-set {
+      position: relative;
+      display: flex;
+      flex-wrap: wrap;
+      margin: 0.1em 0;
+      border-radius: 0.1rem;
+
+      // Hide radio buttons
+      > input {
+        display: none;
+
+        // Active tab label
+        &:checked + label {
+          color: var(--md-accent-fg-color);
+          border-color: var(--md-accent-fg-color);
+
+          // Show tabbed block content
+          & + .tabbed-content {
+            display: block;
+          }
+        }
+      }
+
+      // Tab label
+      > label {
+        z-index: 1;
+        width: auto;
+        padding: 0.6rem 1.25em 0.5rem;
+        color: var(--md-default-fg-color--light);
+        font-weight: 700;
+        font-size: 0.64rem;
+        border-bottom: 0.1rem solid transparent;
+        cursor: pointer;
+        transition: color 250ms;
+        -webkit-tap-highlight-color: transparent;
+
+        // Hovered tab label
+        html &:hover {
+          color: var(--md-accent-fg-color);
+        }
+      }
+    }
+  }
+
+  // table
+  table thead tr {
+    background-color: #f8f8f8;
+  }
+
+  table {
+    display: block;
+    width: 100%;
+    margin-top: 0;
+    margin-bottom: 10px;
+    overflow: auto;
+    border-collapse: collapse;
+    border-spacing: 0;
+  }
+
+  table th {
+    font-weight: 600;
+  }
+
+  table td,
+  table th {
+    padding: 6px 13px;
+    border: 1px solid #dfe2e5;
+  }
+
+  table tr {
+    background-color: #fff;
+    border-top: 1px solid #c6cbd1;
+  }
+
+  table tr:nth-child(2n) {
+    background-color: #f6f8fa;
+  }
+
+  // Task lists
+  // :global(.contains-task-list) {
+
+  //   &,
+  //   ul,
+  //   ol {
+  //     padding-left: 21px;
+  //   }
+
+  //   li {
+  //     margin-top: 6px;
+
+  //     &:global(.task-list-item) {
+  //       list-style-type: none;
+  //       margin-left: -18.5px;
+  //     }
+
+  //     &:not(:global(.task-list-item)) {
+  //       padding-left: 5.5px;
+  //     }
+  //   }
+
+  //   .taskListCheckbox>label:first-of-type+div {
+  //     padding-left: 24px;
+  //   }
+  // }
+
+  // details
+  :global {
+    .md-clipboard:before,
+    .md-icon,
+    .md-nav__button,
+    .md-nav__link:after,
+    .md-nav__title:before,
+    .md-search-result__article--document:before,
+    .md-source-file:before,
+    .admonition > .admonition-title:before,
+    .admonition > summary:before,
+    .critic.comment:before,
+    .footnote-backref,
+    .task-list-control .task-list-indicator:before,
+    details > .admonition-title:before,
+    details > summary:before,
+    summary:after {
+      font-weight: 400;
+      font-style: normal;
+      font-variant: normal;
+      line-height: 1;
+      direction: ltr;
+      white-space: nowrap;
+      text-transform: none;
+      word-wrap: normal;
+    }
+
+    .admonition,
+    details {
+      position: relative;
+      margin: 0.8625em 0;
+      // margin: 1.5625em 0;
+      padding: 0 0.6rem;
+      overflow: auto;
+      // font-size: .64rem;
+      font-size: 15px;
+      border-left: 0.2rem solid #448aff;
+      border-radius: 0.1rem;
+      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+        0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+    }
+
+    .admonition > :last-child,
+    h details > :last-child {
+      margin-bottom: 0.6rem;
+    }
+
+    .admonition .admonition,
+    .admonition details,
+    details .admonition,
+    details details {
+      margin: 1em 0;
+    }
+
+    .admonition > .admonition-title,
+    .admonition > summary,
+    details > .admonition-title,
+    details > summary {
+      margin: 0 -0.6rem;
+      padding: 0.4rem 0.6rem 0.4rem 0.4rem;
+      font-weight: 700;
+      background-color: rgba(68, 138, 255, 0.1);
+      border-bottom: 0.05rem solid rgba(68, 138, 255, 0.1);
+    }
+
+    .admonition > .admonition-title:last-child,
+    .admonition > summary:last-child,
+    details > .admonition-title:last-child,
+    details > summary:last-child {
+      margin-bottom: 10px;
+    }
+
+    .admonition > .admonition-title:before,
+    .admonition > summary:before,
+    details > .admonition-title:before,
+    details > summary:before {
+      position: absolute;
+      left: 0.6rem;
+      color: #448aff;
+      font-size: 1rem;
+    }
+
+    .admonition.abstract,
+    .admonition.summary,
+    .admonition.tldr,
+    details.abstract,
+    details.summary,
+    details.tldr {
+      border-left-color: #00b0ff;
+    }
+
+    .admonition.abstract > .admonition-title,
+    .admonition.abstract > summary,
+    .admonition.summary > .admonition-title,
+    .admonition.summary > summary,
+    .admonition.tldr > .admonition-title,
+    .admonition.tldr > summary,
+    details.abstract > .admonition-title,
+    details.abstract > summary,
+    details.summary > .admonition-title,
+    details.summary > summary,
+    details.tldr > .admonition-title,
+    details.tldr > summary {
+      background-color: rgba(0, 176, 255, 0.1);
+      border-bottom-color: rgba(0, 176, 255, 0.1);
+    }
+
+    .admonition.abstract > .admonition-title:before,
+    .admonition.abstract > summary:before,
+    .admonition.summary > .admonition-title:before,
+    .admonition.summary > summary:before,
+    .admonition.tldr > .admonition-title:before,
+    .admonition.tldr > summary:before,
+    details.abstract > .admonition-title:before,
+    details.abstract > summary:before,
+    details.summary > .admonition-title:before,
+    details.summary > summary:before,
+    details.tldr > .admonition-title:before,
+    details.tldr > summary:before {
+      color: #00b0ff;
+    }
+
+    .admonition.info,
+    .admonition.todo,
+    details.info,
+    details.todo {
+      border-left-color: #00b8d4;
+    }
+
+    .admonition.info > .admonition-title,
+    .admonition.info > summary,
+    .admonition.todo > .admonition-title,
+    .admonition.todo > summary,
+    details.info > .admonition-title,
+    details.info > summary,
+    details.todo > .admonition-title,
+    details.todo > summary {
+      background-color: rgba(0, 184, 212, 0.1);
+      border-bottom-color: rgba(0, 184, 212, 0.1);
+    }
+
+    .admonition.hint,
+    .admonition.important,
+    .admonition.tip,
+    details.hint,
+    details.important,
+    details.tip {
+      border-left-color: #00bfa5;
+    }
+
+    .admonition.hint > .admonition-title,
+    .admonition.hint > summary,
+    .admonition.important > .admonition-title,
+    .admonition.important > summary,
+    .admonition.tip > .admonition-title,
+    .admonition.tip > summary,
+    details.hint > .admonition-title,
+    details.hint > summary,
+    details.important > .admonition-title,
+    details.important > summary,
+    details.tip > .admonition-title,
+    details.tip > summary {
+      background-color: rgba(0, 191, 165, 0.1);
+      border-bottom-color: rgba(0, 191, 165, 0.1);
+    }
+
+    .admonition.check,
+    .admonition.done,
+    .admonition.success,
+    details.check,
+    details.done,
+    details.success {
+      border-left-color: #00c853;
+    }
+
+    .admonition.check > .admonition-title,
+    .admonition.check > summary,
+    .admonition.done > .admonition-title,
+    .admonition.done > summary,
+    .admonition.success > .admonition-title,
+    .admonition.success > summary,
+    details.check > .admonition-title,
+    details.check > summary,
+    details.done > .admonition-title,
+    details.done > summary,
+    details.success > .admonition-title,
+    details.success > summary {
+      background-color: rgba(0, 200, 83, 0.1);
+      border-bottom-color: rgba(0, 200, 83, 0.1);
+    }
+
+    .admonition.check > .admonition-title:before,
+    .admonition.check > summary:before,
+    .admonition.done > .admonition-title:before,
+    .admonition.done > summary:before,
+    .admonition.success > .admonition-title:before,
+    .admonition.success > summary:before,
+    details.check > .admonition-title:before,
+    details.check > summary:before,
+    details.done > .admonition-title:before,
+    details.done > summary:before,
+    details.success > .admonition-title:before,
+    details.success > summary:before {
+      color: #00c853;
+    }
+
+    .admonition.faq,
+    .admonition.help,
+    .admonition.question,
+    details.faq,
+    details.help,
+    details.question {
+      border-left-color: #64dd17;
+    }
+
+    .admonition.faq > .admonition-title,
+    .admonition.faq > summary,
+    .admonition.help > .admonition-title,
+    .admonition.help > summary,
+    .admonition.question > .admonition-title,
+    .admonition.question > summary,
+    details.faq > .admonition-title,
+    details.faq > summary,
+    details.help > .admonition-title,
+    details.help > summary,
+    details.question > .admonition-title,
+    details.question > summary {
+      background-color: rgba(100, 221, 23, 0.1);
+      border-bottom-color: rgba(100, 221, 23, 0.1);
+    }
+
+    .admonition.faq > .admonition-title:before,
+    .admonition.faq > summary:before,
+    .admonition.help > .admonition-title:before,
+    .admonition.help > summary:before,
+    .admonition.question > .admonition-title:before,
+    .admonition.question > summary:before,
+    details.faq > .admonition-title:before,
+    details.faq > summary:before,
+    details.help > .admonition-title:before,
+    details.help > summary:before,
+    details.question > .admonition-title:before,
+    details.question > summary:before {
+      color: #64dd17;
+    }
+
+    .admonition.attention,
+    .admonition.caution,
+    .admonition.warning,
+    details.attention,
+    details.caution,
+    details.warning {
+      border-left-color: #ff9100;
+    }
+
+    .admonition.attention > .admonition-title,
+    .admonition.attention > summary,
+    .admonition.caution > .admonition-title,
+    .admonition.caution > summary,
+    .admonition.warning > .admonition-title,
+    .admonition.warning > summary,
+    details.attention > .admonition-title,
+    details.attention > summary,
+    details.caution > .admonition-title,
+    details.caution > summary,
+    details.warning > .admonition-title,
+    details.warning > summary {
+      background-color: rgba(255, 145, 0, 0.1);
+      border-bottom-color: rgba(255, 145, 0, 0.1);
+    }
+
+    .admonition.attention > .admonition-title:before,
+    .admonition.attention > summary:before,
+    .admonition.caution > .admonition-title:before,
+    .admonition.caution > summary:before,
+    .admonition.warning > .admonition-title:before,
+    .admonition.warning > summary:before,
+    details.attention > .admonition-title:before,
+    details.attention > summary:before,
+    details.caution > .admonition-title:before,
+    details.caution > summary:before,
+    details.warning > .admonition-title:before,
+    details.warning > summary:before {
+      color: #ff9100;
+    }
+
+    .admonition.fail,
+    .admonition.failure,
+    .admonition.missing,
+    details.fail,
+    details.failure,
+    details.missing {
+      border-left-color: #ff5252;
+    }
+
+    .admonition.fail > .admonition-title,
+    .admonition.fail > summary,
+    .admonition.failure > .admonition-title,
+    .admonition.failure > summary,
+    .admonition.missing > .admonition-title,
+    .admonition.missing > summary,
+    details.fail > .admonition-title,
+    details.fail > summary,
+    details.failure > .admonition-title,
+    details.failure > summary,
+    details.missing > .admonition-title,
+    details.missing > summary {
+      background-color: rgba(255, 82, 82, 0.1);
+      border-bottom-color: rgba(255, 82, 82, 0.1);
+    }
+
+    .admonition.fail > .admonition-title:before,
+    .admonition.fail > summary:before,
+    .admonition.failure > .admonition-title:before,
+    .admonition.failure > summary:before,
+    .admonition.missing > .admonition-title:before,
+    .admonition.missing > summary:before,
+    details.fail > .admonition-title:before,
+    details.fail > summary:before,
+    details.failure > .admonition-title:before,
+    details.failure > summary:before,
+    details.missing > .admonition-title:before,
+    details.missing > summary:before {
+      color: #ff5252;
+    }
+
+    .admonition.danger,
+    .admonition.error,
+    details.danger,
+    details.error {
+      border-left-color: #ff1744;
+    }
+
+    .admonition.danger > .admonition-title,
+    .admonition.danger > summary,
+    .admonition.error > .admonition-title,
+    .admonition.error > summary,
+    details.danger > .admonition-title,
+    details.danger > summary,
+    details.error > .admonition-title,
+    details.error > summary {
+      background-color: rgba(255, 23, 68, 0.1);
+      border-bottom-color: rgba(255, 23, 68, 0.1);
+    }
+
+    .admonition.danger > .admonition-title:before,
+    .admonition.danger > summary:before,
+    .admonition.error > .admonition-title:before,
+    .admonition.error > summary:before,
+    details.danger > .admonition-title:before,
+    details.danger > summary:before,
+    details.error > .admonition-title:before,
+    details.error > summary:before {
+      color: #ff1744;
+    }
+
+    .admonition.bug,
+    details.bug {
+      border-left-color: #f50057;
+    }
+
+    .admonition.bug > .admonition-title,
+    .admonition.bug > summary,
+    details.bug > .admonition-title,
+    details.bug > summary {
+      background-color: rgba(245, 0, 87, 0.1);
+      border-bottom-color: rgba(245, 0, 87, 0.1);
+    }
+
+    .admonition.bug > .admonition-title:before,
+    .admonition.bug > summary:before,
+    details.bug > .admonition-title:before,
+    details.bug > summary:before {
+      color: #f50057;
+    }
+
+    .admonition.example,
+    details.example {
+      border-left-color: #651fff;
+    }
+
+    .admonition.example > .admonition-title,
+    .admonition.example > summary,
+    details.example > .admonition-title,
+    details.example > summary {
+      background-color: rgba(101, 31, 255, 0.1);
+      border-bottom-color: rgba(101, 31, 255, 0.1);
+    }
+
+    .admonition.example > .admonition-title:before,
+    .admonition.example > summary:before,
+    details.example > .admonition-title:before,
+    details.example > summary:before {
+      color: #651fff;
+    }
+
+    .admonition.cite,
+    .admonition.quote,
+    details.cite,
+    details.quote {
+      border-left-color: #9e9e9e;
+    }
+
+    .admonition.cite > .admonition-title,
+    .admonition.cite > summary,
+    .admonition.quote > .admonition-title,
+    .admonition.quote > summary,
+    details.cite > .admonition-title,
+    details.cite > summary,
+    details.quote > .admonition-title,
+    details.quote > summary {
+      background-color: hsla(0, 0%, 62%, 0.1);
+      border-bottom-color: hsla(0, 0%, 62%, 0.1);
+    }
+
+    .admonition.cite > .admonition-title:before,
+    .admonition.cite > summary:before,
+    .admonition.quote > .admonition-title:before,
+    .admonition.quote > summary:before,
+    details.cite > .admonition-title:before,
+    details.cite > summary:before,
+    details.quote > .admonition-title:before,
+    details.quote > summary:before {
+      color: #9e9e9e;
+    }
+
+    details {
+      display: block;
+      padding-top: 0;
+
+      &:not([open]) {
+        padding-bottom: 0;
+
+        & > summary {
+          border-bottom: none;
+        }
+      }
+
+      summary {
+        padding-right: 0.5rem;
+      }
+    }
+
+    details[open] {
+      & > summary {
+        margin-bottom: 15px;
+
+        &:after {
+          transform: rotate(180deg);
+        }
+      }
+    }
+
+    summary {
+      display: block;
+      outline: none;
+      cursor: pointer;
+
+      &::-webkit-details-marker {
+        display: none;
+      }
+
+      &:after {
+        position: absolute;
+        top: 0.4rem;
+        right: 0.6rem;
+        color: rgba(0, 0, 0, 0.26);
+        font-size: 1rem;
+      }
+    }
+
+    .no-details {
+      details {
+        &:not([open]) {
+          & > * {
+            display: none;
+          }
+
+          summary {
+            display: block;
+          }
+        }
+      }
     }
   }
 }
