feat: code box editor

--- a/src/markdown/MarkdownContent.module.less
+++ b/src/markdown/MarkdownContent.module.less
@@ -1,6 +1,7 @@
 @border-color: #46a0e4;
 
 .codeBox {
+  --theme-shadow: rgba(34, 36, 38, 0.15);
   position: relative;
   box-sizing: inherit;
   margin: 1rem 0;
