fix: code box editor button margin

--- a/src/components/Editor/Editor.common.module.less
+++ b/src/components/Editor/Editor.common.module.less
@@ -25,11 +25,13 @@
 
 :global {
   .ant-tabs-top > .ant-tabs-nav::before {
+    padding-top: 4px;
     // border-bottom: 1px solid #f0f0f0;
     border-bottom: 1px solid #3e90cc;
   }
 
   .ant-tabs-card > .ant-tabs-nav .ant-tabs-tab {
+    padding-top: 4px;
     border-bottom: 1px solid #3e90cc;
   }
 }
