fix: code box font size

--- a/src/markdown/MarkdownContent.module.less
+++ b/src/markdown/MarkdownContent.module.less
@@ -8,10 +8,10 @@
   padding: 0 !important;
   overflow: hidden;
   color: inherit !important;
+  // font-size: 1rem;
+  font-size: 14px;
   font-family: inherit;
   line-height: 1.4285em;
-  // font-size: 1rem;
-  // font-size: 14px;
   background: inherit !important;
   border: 1px solid @border-color;
   border-color: @border-color !important;
