--- a/src/components/ExampleBox.module.less
+++ b/src/components/ExampleBox.module.less
@@ -29,18 +29,37 @@
     border: 1px solid @border-color;
   }
 
+  .yourOutput {
+    position: relative;
+    top: -2px;
+    margin: 0;
+    margin-top: -1em;
+    padding: 0;
+    border: 1px solid @border-color;
+  }
+
+  .checkerMessage {
+    position: relative;
+    top: -3px;
+    margin: 0;
+    margin-bottom: 1em;
+    padding: 0;
+    border: 1px solid @border-color;
+  }
+
   .title {
     margin: 0;
     padding: 0.25em;
     font-weight: 700;
     font-size: 1.3em;
     line-height: 1.5em;
-    text-transform: lowercase;
+    // text-transform: lowercase;
     // border-bottom: 1px solid #888;
     border-bottom: 1px solid @border-color;
   }
 
-  .copyBtn {
+  .copyBtn,
+  .downloadBtn {
     float: right;
     margin: 1px;
     padding: 3px;
