--- a/src/components/UserAvatar.module.less
+++ b/src/components/UserAvatar.module.less
@@ -1,8 +1,10 @@
 .avatar {
   &.large {
     width: 100%;
-    border: 3px solid #3e90cc;
-    border-radius: 0.8em;
+    border: 2px solid #3e90cc;
+    border-radius: 0.28571429rem;
+    box-shadow: 0 1px 2px 0 var(--theme-shadow);
+    --theme-shadow: rgba(34, 36, 38, 0.15);
   }
 
   &.small {
