fix: markdown editor tab border

--- a/src/components/Editor/Editor.common.module.less
+++ b/src/components/Editor/Editor.common.module.less
@@ -32,10 +32,18 @@
 
   .ant-tabs-card > .ant-tabs-nav .ant-tabs-tab {
     padding-top: 4px;
+    background: #fff;
+    border: 0px;
     border-bottom: 1px solid #3e90cc;
   }
 
   .ant-tabs-content {
     margin-top: -10px;
+  }
+
+  .ant-tabs-card > .ant-tabs-nav .ant-tabs-tab-active {
+    border: 1px solid #3e90cc;
+    // background: #fafafa;
+    // border: 1px solid #f0f0f0;
   }
 }
