--- a/src/pages/discussion/view/DiscussionViewPage.module.less
+++ b/src/pages/discussion/view/DiscussionViewPage.module.less
@@ -1,13 +1,5 @@
 .root {
   width: 100%;
-  max-width: 1100px;
-  // display: flex;
   margin: auto;
-
-  // align-items: center;
-}
-
-.secondRoot {
-  // display: flex;
-  // justify-content: center;
+  padding-top: 20px;
 }
