--- a/src/pages/discussion/view/DiscussionViewPage.module.less
+++ b/src/pages/discussion/view/DiscussionViewPage.module.less
@@ -2,4 +2,10 @@
   width: 100%;
   margin: auto;
   padding-top: 20px;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.breadCrumb {
+  margin-bottom: 30px;
 }
