--- a/src/pages/user/view/UserViewPage.module.less
+++ b/src/pages/user/view/UserViewPage.module.less
@@ -12,3 +12,15 @@
   width: 100%;
   height: calc(100vh - 150px);
 }
+
+.username {
+  box-sizing: inherit;
+  margin-top: 14px !important;
+  margin-bottom: 14px !important;
+  font-size: 24px;
+  font-family: "Lato", "Noto Sans CJK SC", "Source Han Sans SC", "PingFang SC",
+    "Hiragino Sans GB", "Microsoft Yahei", "WenQuanYi Micro Hei",
+    "Droid Sans Fallback", sans-serif;
+  line-height: 1.4285em;
+  -webkit-text-size-adjust: 100%;
+}
