--- a/src/components/CodeBox.module.less
+++ b/src/components/CodeBox.module.less
@@ -38,12 +38,13 @@
   box-sizing: inherit;
   margin: 1rem 0;
   padding: 0 !important;
-  overflow: hidden;
+  overflow: auto;
   color: inherit !important;
   // font-size: 1rem;
   font-size: 14px;
   font-family: inherit;
   line-height: 1.4285em;
+  white-space: pre;
   background: inherit !important;
   border: 1px solid @border-color;
   border-color: @border-color !important;
