feat: discussion view

--- a/src/pages/discussion/view/components/DiscussionBox.module.less
+++ b/src/pages/discussion/view/components/DiscussionBox.module.less
@@ -2,8 +2,9 @@
 }
 
 .panel-header {
+  width: 100%;
   min-height: 30px;
-  padding: 5px;
+  padding: 8px;
   border-bottom: 1px solid #3e90cc;
 }
 
