feat: subway graph

--- a/src/pages/user/view/UserViewPage.module.less
+++ b/src/pages/user/view/UserViewPage.module.less
@@ -24,3 +24,20 @@
   line-height: 1.4285em;
   -webkit-text-size-adjust: 100%;
 }
+
+@border-color: #3e90cc;
+
+.border {
+  border: 1px solid @border-color;
+  border-radius: 0.28571429rem;
+}
+
+.dataView,
+.subwayGraph {
+  padding: 10px;
+}
+
+.subwayGraph {
+  padding-top: 30px;
+  padding-bottom: 0px;
+}
