--- a/src/less/AntTableHead.module.less
+++ b/src/less/AntTableHead.module.less
@@ -27,6 +27,7 @@
 
     .ant-table-tbody > tr > td {
       min-height: 32px;
+      font-size: 15px;
     }
 
     .ant-table-filter-trigger.active {
