feat: client machine

--- a/src/pages/admin/general/JudgeMachinePage.module.less
+++ b/src/pages/admin/general/JudgeMachinePage.module.less
@@ -43,3 +43,16 @@
     border-color: #13c2c2;
   }
 }
+
+.cpuFlags {
+  width: 500px;
+  max-width: calc(100vw - 50px);
+}
+
+.cpuCache {
+  white-space: nowrap;
+}
+
+.cpuCacheName {
+  padding-right: 12px;
+}
