--- a/src/pages/problem/view/ProblemViewPage.module.less
+++ b/src/pages/problem/view/ProblemViewPage.module.less
@@ -3,3 +3,11 @@
   padding-right: 10px;
   padding-left: 10px;
 }
+
+.loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: calc(100vh - 180px);
+}
