--- a/src/pages/problem/view/components/ProblemViewHeader.module.less
+++ b/src/pages/problem/view/components/ProblemViewHeader.module.less
@@ -29,6 +29,11 @@
   border-radius: 0.28571429rem;
   transition: background 0.1s ease;
 
+  &.type {
+    background-color: #00b5ad;
+    border-color: #00b5ad;
+  }
+
   &.time {
     background-color: #e03997;
     border-color: #e03997;
