--- a/src/pages/submission/view/SubmissionViewPage.module.less
+++ b/src/pages/submission/view/SubmissionViewPage.module.less
@@ -1,3 +1,11 @@
 .root {
   padding-top: 20px;
 }
+
+.loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: calc(100vh - 180px);
+}
