--- a/src/pages/contest/components/ContestHeader.module.less
+++ b/src/pages/contest/components/ContestHeader.module.less
@@ -1,3 +1,11 @@
+.loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: "100%";
+  height: 120px;
+}
+
 .contestTitle {
   box-sizing: inherit;
   padding-bottom: 10px;
