feat: user profile

--- a/src/pages/user/view/UserViewPage.module.less
+++ b/src/pages/user/view/UserViewPage.module.less
@@ -16,7 +16,8 @@
 .username {
   box-sizing: inherit;
   margin-top: 14px !important;
-  margin-bottom: 14px !important;
+  margin-bottom: 7px !important;
+  font-weight: 600;
   font-size: 24px;
   font-family: "Lato", "Noto Sans CJK SC", "Source Han Sans SC", "PingFang SC",
     "Hiragino Sans GB", "Microsoft Yahei", "WenQuanYi Micro Hei",
