--- a/src/pages/user/view/UserViewPage.module.less
+++ b/src/pages/user/view/UserViewPage.module.less
@@ -47,3 +47,46 @@
   padding-top: 15px;
   padding-bottom: 15px;
 }
+
+:global {
+  .react-calendar-heatmap {
+    margin-top: -15px;
+    margin-bottom: -20px;
+    margin-left: -8px;
+
+    @media (min-width: 768px) {
+      margin-bottom: -35px;
+    }
+  }
+}
+
+.subwayGraph-footer {
+  margin-bottom: 10px;
+}
+
+.subwayGraph-square {
+  --scroll-bar: 0;
+  box-sizing: border-box;
+  width: 10px;
+  height: 10px;
+
+  &.color-github-0 {
+    background-color: #eeeeee;
+  }
+
+  &.color-github-1 {
+    background-color: #d6e685;
+  }
+
+  &.color-github-2 {
+    background-color: #8cc665;
+  }
+
+  &.color-github-3 {
+    background-color: #44a340;
+  }
+
+  &.color-github-4 {
+    background-color: #1e6823;
+  }
+}
