feat: add submission status frozen

--- a/src/less/StatusText.module.less
+++ b/src/less/StatusText.module.less
@@ -18,6 +18,7 @@
   --theme-status-compiling: #00b5ad;
   --theme-status-running: #6cf;
   --theme-status-skipped: #78909c;
+  --theme-status-frozen: #dd514c;
 
   .Pending {
     color: var(--theme-status-pending);
@@ -93,5 +94,8 @@
 
   .Skipped {
     color: var(--theme-status-skipped);
+  }
+  .Frozen {
+    color: var(--theme-status-frozen);
   }
 }
