feat: contest standings

--- a/src/less/AntTableHead.module.less
+++ b/src/less/AntTableHead.module.less
@@ -27,7 +27,7 @@
 
     .ant-table-tbody > tr > td {
       min-height: 32px;
-      font-size: 15px;
+      font-size: 15px !important;
     }
 
     .ant-table-filter-trigger.active {
