feat: admin contest add problem

--- a/src/pages/admin/contest/view/UserPage.module.less
+++ b/src/pages/admin/contest/view/UserPage.module.less
@@ -1,4 +1,9 @@
+.addBtn {
+  width: 100%;
+  margin-bottom: 10px;
+  text-align: right;
+}
+
 .table {
-  padding-top: 10px;
   font-weight: bold;
 }
