--- a/src/pages/admin/contest/view/ProblemPage.module.less
+++ b/src/pages/admin/contest/view/ProblemPage.module.less
@@ -1,5 +1,10 @@
+.addBtn {
+  width: 100%;
+  margin-bottom: 10px;
+  text-align: right;
+}
+
 .tableRoot {
   width: 100%;
-  padding-top: 10px;
   font-weight: bold;
 }
