--- a/src/pages/contest/standings/components/Standings/Standings.less
+++ b/src/pages/contest/standings/components/Standings/Standings.less
@@ -43,12 +43,16 @@ tr.head {
 
 tr.team {
   height: 2.5em !important;
-  cursor: pointer;
+  // cursor: pointer;
 }
 
 tr.team:hover {
-  background-color: #eeeeff;
-  opacity: 0.3;
+  // background-color: #eeeeff;
+  // opacity: 0.3;
+}
+
+.hover {
+  cursor: pointer;
 }
 
 td.stnd {
