--- a/src/global.less
+++ b/src/global.less
@@ -3,20 +3,20 @@
   height: 2px;
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
   width: 2px;
   height: 2px;
-	background-color: #aaa;
+  background-color: #aaa;
 }
 
 ::-moz-selection {
-	color: #fff;
-	background: #3d74aa
+  color: #fff;
+  background: #3d74aa;
 }
 
 ::selection {
-	color: #fff;
-	background: #3d74aa
+  color: #fff;
+  background: #3d74aa;
 }
 
 .ant-btn-primary {
@@ -24,13 +24,13 @@
   color: #fff !important;
   background-color: var(--btn-color) !important;
   border-color: var(--btn-color) !important;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, .12);
-  -webkit-box-shadow: 0 2px 0 rgba(0, 0, 0, .045);
-  box-shadow: 0 2px 0 rgba(0, 0, 0, .045);
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.12);
+  -webkit-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045);
+  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045);
 }
 
 a {
-  color: #4183C4;
+  color: #4183c4;
 }
 
 .h-ellipsis {
