--- a/src/pages/contest/standings/components/Standings/Standings.less
+++ b/src/pages/contest/standings/components/Standings/Standings.less
@@ -14,6 +14,10 @@ table.standings {
   border-collapse: separate !important;
   -webkit-border-horizontal-spacing: 2px !important;
   -webkit-border-vertical-spacing: 2px !important;
+
+  th {
+    text-align: center;
+  }
 }
 
 .loading {
