--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -3,10 +3,34 @@
 
 <head>
   <meta charset="utf-8" />
-  <title><%= context.config.define.HTML_TITLE %></title>
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
+  <script>
+    function normalizePath(path) {
+        while (path.endsWith("/")) path = path.slice(0, -1);
+        return path + "/";
+    }
+
+    var apiEndpoint;
+    try {
+      apiEndpoint = __API_ENDPOINT__;
+    } catch(e) {
+      apiEndpoint = "/api/";
+    }
+    apiEndpoint = normalizePath(apiEndpoint);
+    window.apiEndpoint = apiEndpoint;
+
+    var defaultTitle;
+    try {
+      defaultTitle = __DEFAULT_TITLE__;
+    } catch (e) {
+      defaultTitle = "JudgeQ";
+    }
+    window.defaultTitle = defaultTitle;
+    document.title = defaultTitle;
+
+  </script>
   <link rel="stylesheet" href="<%= context.config.publicPath %>amazeui/css/amazeui.min.css">
 </head>
 
@@ -16,6 +40,47 @@
   <div class="amz-toolbar" id="go-top" style="display: none; position: fixed; bottom: 15px; right: 15px;">
     <a data-am-smooth-scroll href="#" title="go to top" class="am-icon-btn am-icon-arrow-up"></a>
   </div>
+  <script>
+    try {
+        var baiduAnalyticsId = __BAIDU_ANALYTICS_ID__;
+        var _hmt = _hmt || [];
+        (function () {
+            var hm = document.createElement("script");
+            hm.src = `https://hm.baidu.com/hm.js?${baiduAnalyticsId}`;
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    } catch (e) {}
+
+    try {
+        var googleAnalyticsId = __GOOGLE_ANALYTICS_ID__;
+        (function () {
+            if (!location.port) {
+                (function (i, s, o, g, r, a, m) {
+                    i["GoogleAnalyticsObject"] = r;
+                    (i[r] =
+                    i[r] ||
+                    function () {
+                        (i[r].q = i[r].q || []).push(arguments);
+                    }),
+                    (i[r].l = 1 * new Date());
+                    (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
+                    a.async = 1;
+                    a.src = g;
+                    m.parentNode.insertBefore(a, m);
+                })(
+                    window,
+                    document,
+                    "script",
+                    "//www.google-analytics.com/analytics.js",
+                    "ga"
+                );
+                ga("create", `${googleAnalyticsId}`, "auto");
+                ga("send", "pageview");
+            }
+        })();
+    } catch (e) {}
+  </script>
 </body>
 
 <script src="<%= context.config.publicPath %>jquery/jquery.min.js"></script>
